--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -141,7 +141,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:onClick="btnreset"
+        android:onClick="btnreset1"
         android:layout_marginBottom="76dp"
         android:text="@string/str8"
 
