--- a/app/src/main/res/layout-land/activity_main3.xml
+++ b/app/src/main/res/layout-land/activity_main3.xml
@@ -11,9 +11,9 @@
         android:id="@+id/teama"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginLeft="44dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginLeft="48dp"
+        android:layout_marginTop="28dp"
         android:text="TeamA"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,9 +23,9 @@
         android:id="@+id/teamb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="44dp"
-        android:layout_marginRight="44dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginRight="48dp"
         android:text="TeamB"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="75dp"
         android:layout_marginLeft="75dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="36dp"
         android:layout_marginBottom="24dp"
         android:text="@string/str9"
         android:textSize="60sp"
@@ -50,7 +50,7 @@
         android:id="@+id/sc2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="36dp"
         android:layout_marginEnd="76dp"
         android:layout_marginRight="76dp"
         android:layout_marginBottom="24dp"
@@ -67,7 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="12dp"
         android:onClick="btna1"
         android:text="@string/str5"
         app:layout_constraintBottom_toTopOf="@+id/btna2"
@@ -79,7 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="12dp"
         android:onClick="btna2"
         android:text="@string/str6"
         app:layout_constraintBottom_toTopOf="@+id/btna3"
@@ -91,7 +91,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginBottom="196dp"
+        android:layout_marginBottom="50dp"
         android:onClick="btna3"
         android:text="@string/str7"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -103,7 +103,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="12dp"
         android:onClick="btnb1"
         android:text="@string/str5"
         app:layout_constraintBottom_toTopOf="@+id/btnb2"
@@ -115,7 +115,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="12dp"
         android:onClick="btnb2"
         android:text="@string/str6"
         app:layout_constraintBottom_toTopOf="@+id/btnb3"
@@ -127,7 +127,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
-        android:layout_marginBottom="196dp"
+        android:layout_marginBottom="50dp"
         android:onClick="btnb3"
         android:text="@string/str7"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -141,24 +141,25 @@
         android:layout_marginLeft="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="76dp"
+        android:layout_marginBottom="16dp"
         android:onClick="btnreset1"
         android:text="@string/str8"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent" />
 
     <View
         android:id="@+id/divider"
         android:layout_width="1dp"
-        android:layout_height="699dp"
+        android:layout_height="250dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="70dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="350dp"
+        android:layout_marginBottom="100dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
