--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -5,4 +5,8 @@
     <item
         android:id="@+id/menu_set"
         android:title="Item" />
+
+    <item
+        android:id="@+id/open_list"
+        android:title="@string/open_list" />
 </menu>
